# physical-ai-robotics-book

./: .gitignore  README.md  package-lock.json  vercel.json
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: README.md  main.py  pyproject.toml
backend/rag_agent/: README.md  main.py  pyproject.toml  requirements.txt
backend/rag_agent/agents/: rag_agent.py
backend/rag_agent/api/: query_endpoint.py
backend/rag_agent/config/: settings.py
backend/rag_agent/models/: query_models.py
backend/rag_agent/services/: qdrant_service.py  rag_service.py
docu/: docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  tsconfig.json
docu/docs/: 00-intro.md
docu/src/components/: ErrorDisplay.jsx  FloatingChatbot.README.md  FloatingChatbot.jsx  FloatingChatbot.test.js  OfflineIndicator.jsx  QueryInput.jsx  ResponseDisplay.jsx
docu/src/contexts/: BackendStatusContext.js
docu/src/e2e/: queryFlow.test.js
docu/src/integration/: finalIntegration.test.js
docu/src/pages/: QueryPage.jsx  index.module.css  index.tsx
docu/src/services/: API_SERVICE_DOCUMENTATION.md  USAGE_EXAMPLES.md  api.js  apiCleanup.js  apiSecurity.js  configValidation.js  dataModels.js  (+2 more)
specs/001-backend-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-robotics-textbook/: module-outlines.md  plan.md  spec.md  tasks.md
(+43 files in other folders)
