[project]
name = "rag-agent"
version = "0.1.0"
description = "RAG Agent using OpenAI Agents SDK + FastAPI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "openai>=1.3.5",
    "qdrant-client>=1.8.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.23.0",
    "pytest>=7.4.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0"
]